--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
           <span class="heading-primary-main">Outdoor</span>
           <span class="heading-primary-sub">is where life happens</span>
         </h1>
+        <a href="#" class="btn btn-white">Get Started</a>
       </div>
     </header>
   </body>
