--- a/index.html
+++ b/index.html
@@ -22,7 +22,36 @@
     <main>
       <section class="section-about">
         <div class="u-center-text">
-          <h2 class="heading-secondary">Exciting tour for adventours people</h2>
+          <h2 class="heading-secondary u-margin-bottom-big">
+            Exciting tour for adventours people
+          </h2>
+        </div>
+
+        <div class="row">
+          <div class="col-1-of-2">
+            <h3 class="heading-textiary u-margin-bottom-small">
+              You are going to fall in love with nature
+            </h3>
+            <p class="paragraph">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore
+              fugiat quasi, labore nobis deleniti voluptatibus odio ratione
+              iste, veritatis eius officiis praesentium. Blanditiis mollitia
+              similique dicta explicabo, nam impedit ad.
+            </p>
+
+            <h3 class="heading-textiary u-margin-bottom-small">
+              You are going to fall in love with nature
+            </h3>
+            <p class="paragraph">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore
+              fugiat quasi, labore nobis deleniti voluptatibus odio ratione
+              iste, veritatis eius officiis praesentium. Blanditiis mollitia
+              similique dicta explicabo, nam impedit ad.
+            </p>
+
+            <a href="#" class="btn-text">learn more &rarr;</a>
+          </div>
+          <div class="col-1-of-2">col-1-of-2</div>
         </div>
       </section>
     </main>
