--- a/index.html
+++ b/index.html
@@ -54,6 +54,29 @@
           <div class="col-1-of-2">col-1-of-2</div>
         </div>
       </section>
+
+      <section class="section-feature"></section>
+      <section class="section-tour">
+        <div class="u-center-text">
+          <h2 class="heading-secondary u-margin-bottom-big">
+            Most popular tour
+          </h2>
+        </div>
+        <div class="row">
+          <div class="col-1-of-3">
+            <div class="card">
+              <div class="card__side card__side--front card__side--front-1">
+                front text
+              </div>
+              <div class="card__side card__side--back card__side--back-1">
+                back text
+              </div>
+            </div>
+          </div>
+          <div class="col-1-of-3">col-1-of-3</div>
+          <div class="col-1-of-3">col-1-of-3</div>
+        </div>
+      </section>
     </main>
 
     <!-- <section class="container">
