--- a/index.html
+++ b/index.html
@@ -78,6 +78,29 @@
         </div>
       </section>
     </main>
+    <div class="popup">
+      <div class="popup__content">
+        <div class="popup__left">
+          <img src="img/nature.jpg" alt="image" class="popup__img" />
+          <img src="img/nature.jpg" alt="image" class="popup__img" />
+        </div>
+        <div class="popup__right">
+          <h2 class="heading-secondary u-margin-bottom-medium">
+            start booking now
+          </h2>
+          <h3 class="heading-textiary u-margin-bottom-small">
+            start booking now
+          </h3>
+          <p class="popup__text">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore
+            fugiat quasi, labore nobis deleniti voluptatibus odio ratione iste,
+            veritatis eius officiis praesentium. Blanditiis mollitia similique
+            dicta explicabo, nam impedit ad.
+          </p>
+          <a href="#" class="btn">Book Now</a>
+        </div>
+      </div>
+    </div>
 
     <!-- <section class="container">
       <div class="row">
